# DeepCritical

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  codex-exec.yml
DeepResearch/: app.py
The Manual/: index.md
docs/: cli.md  configuration.md  developer.md  index.md
docs/api/: deepresearch.md
docs/architecture/: agents-tools.md  graph.md
docs/flows/: bioinformatics.md  deepsearch.md  prime.md
tests/: conftest.py  test_cli_basic.py  test_config_validation.py  test_graph_nodes.py  test_package_imports_minimal.py  test_tool_registry.py
