[project]
name = "deepcritical"
version = "0.1.0"
description = "Hydra-configured, Pydantic Graph-based deep research workflow"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "DeepCritical", email = "noreply@example.com" }
]
dependencies = [
  "beautifulsoup4>=4.14.2",
  "gradio>=5.47.2",
  "hydra-core>=1.3.2",
  "limits>=5.6.0",
  "omegaconf>=2.3.0",
  "pydantic>=2.7",
  "pydantic-ai>=0.0.16",
  "pydantic-graph>=0.2.0",
  "python-dateutil>=2.9.0.post0",
  "testcontainers",
  "trafilatura>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "black>=24.8.0",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "mypy>=1.11.0",
  "pip-audit>=2.7.0",
  "bandit>=1.7.0",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings>=0.26.0",
  "mkdocstrings-python>=1.10.0",
]

[project.scripts]
deepresearch = "DeepResearch.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["DeepResearch"]

[tool.uv.sources]
testcontainers = { git = "https://github.com/josephrp/testcontainers-python.git", rev = "vllm" }

[dependency-groups]
dev = [
  "ruff>=0.6.0",
  "black>=24.8.0",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "bandit>=1.7.0",
  "mypy>=1.11.0",
  "pip-audit>=2.7.0",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings>=0.26.0",
  "mkdocstrings-python>=1.10.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
extend-select = ["B", "C4", "I", "UP"]
exclude = ["uv.lock"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
addopts = "-q -ra"
xfail_strict = true
filterwarnings = [
  "default",
]

[tool.coverage.run]
branch = true
source = ["DeepResearch"]

[tool.coverage.report]
fail_under = 80


